--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "root",
-    "password": "root1234",
+    "username": "crud_user",
+    "password": "password123",
     "database": "crud_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
